# juceDjApp

./: .gitignore  CMakeLists.txt  README.md  juceDjApp.jucer
Builds/MacOSX/: Info-App.plist
Builds/MacOSX/audioDeviceManager.xcodeproj/: project.pbxproj
Builds/MacOSX/audioDeviceManager.xcodeproj/project.xcworkspace/xcuserdata/theaudioprogrammer.xcuserdatad/: UserInterfaceState.xcuserstate
Builds/MacOSX/audioDeviceManager.xcodeproj/xcuserdata/theaudioprogrammer.xcuserdatad/xcschemes/: xcschememanagement.plist
Builds/MacOSX/juceDjApp.xcodeproj/: project.pbxproj
Builds/MacOSX/juceDjApp.xcodeproj/project.xcworkspace/xcuserdata/theaudioprogrammer.xcuserdatad/: UserInterfaceState.xcuserstate
Builds/MacOSX/juceDjApp.xcodeproj/xcuserdata/theaudioprogrammer.xcuserdatad/xcschemes/: xcschememanagement.plist
JuceLibraryCode/: JuceHeader.h
Source/: Main.cpp  MainComponent.cpp  MainComponent.h
Source/AudioPlayer/: AudioPlayer.h
Source/AudioPlayer/Data/: AudioPlayerData.cpp  AudioPlayerData.h  AudioPlayerProcessor.cpp  AudioPlayerProcessor.h
Source/AudioPlayer/State/: AudioPlayerState.h
Source/AudioPlayer/UI/: AudioPlayerUI.cpp  AudioPlayerUI.h
Source/AudioPlayer/View/: AudioPlayerView.cpp  AudioPlayerView.h  AudioWaveformView.cpp  AudioWaveformView.h  CustomAudioThumbnail.cpp  CustomAudioThumbnail.h
Source/LookAndFeel/: StyleSheet.h
Source/Metadata/: Metadata.h  TagReader.h
Source/MixerDevice/: MixerDeviceList.h
Source/MixerDevice/Data/: MixerDevice.h  MixerDeviceList.h  MixerDeviceScanner.h
Source/Playlist/Data/: XmlPlaylist.cpp  XmlPlaylist.h
Source/Playlist/View/: PlaylistView.cpp  PlaylistView.h
Source/Resources/: Resources.cpp  Resources.h
Source/Resources/Assets/: TrackList.xml
Source/Settings/UI/: SettingsUI.cpp  SettingsUI.h
Source/Settings/View/: SettingsView.cpp  SettingsView.h
Source/State/: AudioPlayerState.h
Source/Toolbar/Components/TrackAdd/State/: TrackAddState.h
Source/Toolbar/Components/TrackAdd/View/: TrackAddView.cpp  TrackAddView.h
Source/Toolbar/View/: Toolbar.cpp  Toolbar.h
Source/TrackList/Data/: XmlPlaylist.cpp  XmlPlaylist.h  XmlTrackList.cpp  XmlTrackList.h
Source/TrackList/View/: PlaylistView.cpp  PlaylistView.h  TrackListView.cpp  TrackListView.h
